--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>RegressionSuite</td><td>CreateContactWithOrganizationTest.createContactWithOrgTest()[pri:0, instance:vtiger.ContactsTests.CreateContactWithOrganizationTest@18078bef]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>SmokeSuite</td><td>CreateContact.createContactTest()[pri:0, instance:vtiger.ContactsTests.CreateContact@689604d9]<br/></td></tr>
 </table>
