--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,24 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6f7171">  <td>23/07/22 15:17:16</td>   <td>0</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.ContactsTests.CreateContactWithOrganizationTest@18078bef]">&gt;&gt;bsConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1020520290</td>   <td></td> </tr>
-<tr bgcolor="6f7171">  <td>23/07/22 15:17:16</td>   <td>49</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:vtiger.ContactsTests.CreateContactWithOrganizationTest@18078bef]">&gt;&gt;bcConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1020520290</td>   <td></td> </tr>
-<tr bgcolor="6f7171">  <td>23/07/22 15:17:43</td>   <td>27425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.ContactsTests.CreateContactWithOrganizationTest@18078bef]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@1020520290</td>   <td></td> </tr>
-<tr bgcolor="6f7171">  <td>23/07/22 15:17:43</td>   <td>27425</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.ContactsTests.CreateContactWithOrganizationTest@18078bef]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@1020520290</td>   <td></td> </tr>
-<tr bgcolor="6f7171">  <td>23/07/22 15:17:43</td>   <td>27487</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.ContactsTests.CreateContactWithOrganizationTest@18078bef]">&lt;&lt;asConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1020520290</td>   <td></td> </tr>
-<tr bgcolor="6f7171">  <td>23/07/22 15:17:43</td>   <td>27412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.ContactsTests.CreateContactWithOrganizationTest@18078bef]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@1020520290</td>   <td></td> </tr>
-<tr bgcolor="aab498">  <td>23/07/22 15:17:31</td>   <td>15226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactWithOrganizationTest.createContactWithOrgTest()[pri:0, instance:vtiger.ContactsTests.CreateContactWithOrganizationTest@18078bef]">createContactWithOrgTest</td> 
-  <td>main@1020520290</td>   <td></td> </tr>
-<tr bgcolor="6f7171">  <td>23/07/22 15:17:43</td>   <td>27412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.ContactsTests.CreateContactWithOrganizationTest@18078bef]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@1020520290</td>   <td></td> </tr>
-<tr bgcolor="aab498">  <td>23/07/22 15:17:43</td>   <td>27417</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactWithOrganizationTest.demo()[pri:0, instance:vtiger.ContactsTests.CreateContactWithOrganizationTest@18078bef]">demo</td> 
-  <td>main@1020520290</td>   <td></td> </tr>
-<tr bgcolor="6f7171">  <td>23/07/22 15:17:43</td>   <td>27428</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.ContactsTests.CreateContactWithOrganizationTest@18078bef]">&lt;&lt;acConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="6f7171">  <td>23/07/27 20:56:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.ContactsTests.CreateContact@689604d9]">&lt;&lt;amConfig</td> 
+<td>&nbsp;</td>  <td>main@1541049864</td>   <td></td> </tr>
+<tr bgcolor="aab498">  <td>23/07/27 20:56:27</td>   <td>-7492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContact.createContactTest()[pri:0, instance:vtiger.ContactsTests.CreateContact@689604d9]">createContactTest</td> 
+  <td>main@1541049864</td>   <td></td> </tr>
+<tr bgcolor="6f7171">  <td>23/07/27 20:56:20</td>   <td>-14443</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.ContactsTests.CreateContact@689604d9]">&gt;&gt;bsConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1541049864</td>   <td></td> </tr>
+<tr bgcolor="6f7171">  <td>23/07/27 20:56:35</td>   <td>1091</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.ContactsTests.CreateContact@689604d9]">&lt;&lt;acConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1541049864</td>   <td></td> </tr>
+<tr bgcolor="6f7171">  <td>23/07/27 20:56:25</td>   <td>-9475</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.ContactsTests.CreateContact@689604d9]">&gt;&gt;bmConfig</td> 
+<td>&nbsp;</td>  <td>main@1541049864</td>   <td></td> </tr>
+<tr bgcolor="6f7171">  <td>23/07/27 20:56:35</td>   <td>1141</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.ContactsTests.CreateContact@689604d9]">&lt;&lt;asConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1541049864</td>   <td></td> </tr>
+<tr bgcolor="6f7171">  <td>23/07/27 20:56:20</td>   <td>-14423</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:vtiger.ContactsTests.CreateContact@689604d9]">&gt;&gt;bcConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1541049864</td>   <td></td> </tr>
 </table>
