--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,16 +4,20 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>vtiger.ContactsTests.CreateContact</td>
+<td>vtiger.ContactsTests.CreateContactWithOrganizationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createContactTest</td>
-<td>SmokeSuite </td>
+<td>createContactWithOrgTest</td>
+<td>RegressionSuite </td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>demo</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
