New Create lead Commit

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="84a89d">  <td>23/07/31 00:12:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:vtiger.ContactsTests.CreateContact@29d80d2b]">&gt;&gt;bcConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
-<tr bgcolor="80b48f">  <td>23/07/31 00:12:44</td>   <td>7074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContact.createContactTest()[pri:0, instance:vtiger.ContactsTests.CreateContact@29d80d2b]">createContactTest</td> 
-  <td>main@1753714541</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>23/07/31 00:12:55</td>   <td>17237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.ContactsTests.CreateContact@29d80d2b]">&lt;&lt;amConfig</td> 
+<tr bgcolor="84a89d">  <td>23/08/09 20:40:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">&lt;&lt;amConfig</td> 
 <td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>23/07/31 00:12:56</td>   <td>19080</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.ContactsTests.CreateContact@29d80d2b]">&lt;&lt;acConfig</td> 
+<tr bgcolor="84a89d">  <td>23/08/09 20:40:59</td>   <td>1694</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">&lt;&lt;acConfig</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>23/07/31 00:12:57</td>   <td>19916</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.ContactsTests.CreateContact@29d80d2b]">&lt;&lt;asConfig</td> 
+<tr bgcolor="84a89d">  <td>23/08/09 20:40:59</td>   <td>2575</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">&lt;&lt;asConfig</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>23/07/31 00:12:37</td>   <td>-207</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.ContactsTests.CreateContact@29d80d2b]">&gt;&gt;bsConfig</td> 
+<tr bgcolor="84a89d">  <td>23/08/09 20:40:39</td>   <td>-18249</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">&gt;&gt;bcConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
+<tr bgcolor="84a89d">  <td>23/08/09 20:40:38</td>   <td>-18477</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">&gt;&gt;bsConfig</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>23/07/31 00:12:41</td>   <td>4156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.ContactsTests.CreateContact@29d80d2b]">&gt;&gt;bmConfig</td> 
+<tr bgcolor="80b48f">  <td>23/08/09 20:40:48</td>   <td>-8560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateLead.createContactTest()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">createContactTest</td> 
+  <td>main@1753714541</td>   <td></td> </tr>
+<tr bgcolor="84a89d">  <td>23/08/09 20:40:45</td>   <td>-11524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">&gt;&gt;bmConfig</td> 
 <td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
 </table>
