--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>vtiger.ContactsTests.CreateContact</td>
+<td>vtiger.LeadsTests.CreateLead</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -12,8 +12,7 @@
 <tr>
 <td>&nbsp;</td>
 <td>createContactTest</td>
-<td>SmokeSuite </td>
-</tr>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
