--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="84a89d">  <td>23/08/09 20:40:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>23/08/09 20:40:59</td>   <td>1694</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">&lt;&lt;acConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>23/08/09 20:40:59</td>   <td>2575</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">&lt;&lt;asConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>23/08/09 20:40:39</td>   <td>-18249</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">&gt;&gt;bcConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>23/08/09 20:40:38</td>   <td>-18477</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">&gt;&gt;bsConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
-<tr bgcolor="80b48f">  <td>23/08/09 20:40:48</td>   <td>-8560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateLead.createContactTest()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">createContactTest</td> 
-  <td>main@1753714541</td>   <td></td> </tr>
-<tr bgcolor="84a89d">  <td>23/08/09 20:40:45</td>   <td>-11524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.LeadsTests.CreateLead@29d80d2b]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@1753714541</td>   <td></td> </tr>
+<tr bgcolor="9c6181">  <td>23/08/19 23:56:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">&lt;&lt;amConfig</td> 
+<td>&nbsp;</td>  <td>main@368342628</td>   <td></td> </tr>
+<tr bgcolor="b3afbd">  <td>23/08/19 23:56:45</td>   <td>-3677</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateLead.createLeadTest()[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">createLeadTest</td> 
+  <td>main@368342628</td>   <td></td> </tr>
+<tr bgcolor="9c6181">  <td>23/08/19 23:56:40</td>   <td>-8603</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig(java.lang.String,org.testng.ITestContext)[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">&gt;&gt;bcConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@368342628</td>   <td></td> </tr>
+<tr bgcolor="9c6181">  <td>23/08/19 23:56:43</td>   <td>-5759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">&gt;&gt;bmConfig</td> 
+<td>&nbsp;</td>  <td>main@368342628</td>   <td></td> </tr>
+<tr bgcolor="9c6181">  <td>23/08/19 23:56:50</td>   <td>1420</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">&lt;&lt;asConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@368342628</td>   <td></td> </tr>
+<tr bgcolor="9c6181">  <td>23/08/19 23:56:40</td>   <td>-8802</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">&gt;&gt;bsConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@368342628</td>   <td></td> </tr>
+<tr bgcolor="9c6181">  <td>23/08/19 23:56:49</td>   <td>962</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">&lt;&lt;acConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@368342628</td>   <td></td> </tr>
 </table>
