--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9c6181">  <td>23/08/19 23:56:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">&lt;&lt;acConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@368342628</td>   <td></td> </tr>
-<tr bgcolor="9c6181">  <td>23/08/19 23:56:48</td>   <td>-962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">&lt;&lt;amConfig</td> 
-<td>&nbsp;</td>  <td>main@368342628</td>   <td></td> </tr>
-<tr bgcolor="9c6181">  <td>23/08/19 23:56:50</td>   <td>458</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">&lt;&lt;asConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@368342628</td>   <td></td> </tr>
-<tr bgcolor="9c6181">  <td>23/08/19 23:56:40</td>   <td>-9565</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig(java.lang.String,org.testng.ITestContext)[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">&gt;&gt;bcConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@368342628</td>   <td></td> </tr>
-<tr bgcolor="9c6181">  <td>23/08/19 23:56:43</td>   <td>-6721</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">&gt;&gt;bmConfig</td> 
-<td>&nbsp;</td>  <td>main@368342628</td>   <td></td> </tr>
-<tr bgcolor="9c6181">  <td>23/08/19 23:56:40</td>   <td>-9764</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">&gt;&gt;bsConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@368342628</td>   <td></td> </tr>
-<tr bgcolor="b3afbd">  <td>23/08/19 23:56:45</td>   <td>-4639</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateLead.createLeadTest()[pri:0, instance:vtiger.LeadTests.CreateLead@5be1d0a4]">createLeadTest</td> 
-  <td>main@368342628</td>   <td></td> </tr>
+<tr bgcolor="9c6181">  <td>23/08/31 12:09:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.acConfig()[pri:0, instance:vtiger.VendorsTests.CreateVendors@415b0b49]">&lt;&lt;acConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192923170</td>   <td></td> </tr>
+<tr bgcolor="9c6181">  <td>23/08/31 12:09:46</td>   <td>-992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.amConfig()[pri:0, instance:vtiger.VendorsTests.CreateVendors@415b0b49]">&lt;&lt;amConfig</td> 
+<td>&nbsp;</td>  <td>main@1192923170</td>   <td></td> </tr>
+<tr bgcolor="9c6181">  <td>23/08/31 12:09:47</td>   <td>598</td> <td title="&lt;&lt;BaseClass.asConfig()[pri:0, instance:vtiger.VendorsTests.CreateVendors@415b0b49]">&lt;&lt;asConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192923170</td>   <td></td> </tr>
+<tr bgcolor="9c6181">  <td>23/08/31 12:09:13</td>   <td>-34291</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bcConfig(java.lang.String,org.testng.ITestContext)[pri:0, instance:vtiger.VendorsTests.CreateVendors@415b0b49]">&gt;&gt;bcConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192923170</td>   <td></td> </tr>
+<tr bgcolor="9c6181">  <td>23/08/31 12:09:29</td>   <td>-18227</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.bmConfig()[pri:0, instance:vtiger.VendorsTests.CreateVendors@415b0b49]">&gt;&gt;bmConfig</td> 
+<td>&nbsp;</td>  <td>main@1192923170</td>   <td></td> </tr>
+<tr bgcolor="9c6181">  <td>23/08/31 12:09:12</td>   <td>-34508</td> <td title="&gt;&gt;BaseClass.bsConfig()[pri:0, instance:vtiger.VendorsTests.CreateVendors@415b0b49]">&gt;&gt;bsConfig</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1192923170</td>   <td></td> </tr>
+<tr bgcolor="b3afbd">  <td>23/08/31 12:09:31</td>   <td>-15781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateVendors.createVendorsTest()[pri:0, instance:vtiger.VendorsTests.CreateVendors@415b0b49]">createVendorsTest</td> 
+  <td>main@1192923170</td>   <td></td> </tr>
 </table>
